refactor: Se cambiar a observer funcionalidad confirm de carrito
